# hometec-code

./: Makefile.am  README.md  configure.ac  rebar.config
src/: Makefile.am  hometec.app.src  hometec.erl  hometec_app.erl  hometec_sup.erl
sys/: Makefile.am  hometec.config  hometec.otp.system  hometec.rel.in  hometec.start.in  hometec.stop.in
